--- a/allotment/src/main/resources/application.properties
+++ b/allotment/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.mail.username=greenkp904@gmail.com
 spring.mail.password=jxsw yjia smyy wzlp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Thymeleaf (if using templates)
+spring.thymeleaf.cache=false
