--- a/allotment/src/main/resources/application.properties
+++ b/allotment/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Thymeleaf (if using templates)
 spring.thymeleaf.cache=false
+server.port=${PORT:8080}
